cleanup buttons fire javascript

--- a/web/templates/page/card.html.eex
+++ b/web/templates/page/card.html.eex
@@ -2,5 +2,5 @@
   <h2>You are a werewolf</h2>
   <hr>
   <p>Your mission is to eat everyone in the village before they lynch you.</p>
-  <button id="start-game">lets play</button>
+  <button onclick="document.start_game();">lets play</button>
 </div>
