--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -5,5 +5,5 @@
   <input type="text" name="username" id="username">
   <br>
   <br>
-  <input id="join-game" type="submit" value="start game">
+  <button onclick="document.join_game();" >start game</button>
 </div>
