add player model (randomly selects character)

--- a/web/templates/page/card.html.eex
+++ b/web/templates/page/card.html.eex
@@ -1,6 +1,5 @@
 <div class="jumbotron">
-  <h2>You are a werewolf</h2>
+  <h2>You are a <%= @user.character |> Atom.to_string |> String.capitalize %></h2>
   <hr>
-  <p>Your mission is to eat everyone in the village before they lynch you.</p>
   <button onclick="document.start_game();">lets play</button>
 </div>
